WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124700
[Mac] Fix some deprecation warnings
https://bugs.webkit.org/show_bug.cgi?id=124700
Summary
[Mac] Fix some deprecation warnings
Mark Rowe (bdash)
Reported
2013-11-21 00:12:23 PST
We have some more deprecation warnings we should fix.
Attachments
Patch
(7.15 KB, patch)
2013-11-21 00:14 PST
,
Mark Rowe (bdash)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2013-11-21 00:14:35 PST
Created
attachment 217524
[details]
Patch
WebKit Commit Bot
Comment 2
2013-11-21 18:52:54 PST
Comment on
attachment 217524
[details]
Patch Clearing flags on attachment: 217524 Committed
r159663
: <
http://trac.webkit.org/changeset/159663
>
WebKit Commit Bot
Comment 3
2013-11-21 18:52:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug