<https://webkit.org/b/124700> Fix some deprecation warnings.

Reviewed by Anders Carlsson.

Source/WebCore:

* platform/mac/HTMLConverter.mm:
(fileWrapperForURL): Move off a deprecated NSFileWrapper method.

Source/WebKit/mac:

* Plugins/WebNetscapePluginStream.mm:
(WebNetscapePluginStream::startStream): Move off a deprecated NSData method.
* WebView/WebDataSource.mm:
(-[WebDataSource _fileWrapperForURL:]): Move off a deprecated NSFileWrapper method.
* WebView/WebHTMLView.mm:
(-[WebHTMLView namesOfPromisedFilesDroppedAtDestination:]): Ditto.

Source/WebKit2:

* UIProcess/API/mac/WKView.mm:
(-[WKView namesOfPromisedFilesDroppedAtDestination:]): Move off a deprecated NSFileWrapper method.


Canonical link: https://commits.webkit.org/142917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159663 268f45cc-cd09-0410-ab3c-d52691b4dbfc