Source/WebKit2/UIProcess/API/mac/WKView.mm
@@ -2721,9 +2721,9 @@ static NSString *pathWithUniqueFilenameForPath(NSString *path)
     // FIXME: Report an error if we fail to create a file.
     NSString *path = [[dropDestination path] stringByAppendingPathComponent:[wrapper.get() preferredFilename]];
     path = pathWithUniqueFilenameForPath(path);
-    if (![wrapper.get() writeToFile:path atomically:NO updateFilenames:YES])
-        LOG_ERROR("Failed to create image file via -[NSFileWrapper writeToFile:atomically:updateFilenames:]");
-    
+    if (![wrapper writeToURL:[NSURL fileURLWithPath:path] options:NSFileWrapperWritingWithNameUpdating originalContentsURL:nil error:nullptr])
+        LOG_ERROR("Failed to create image file via -[NSFileWrapper writeToURL:options:originalContentsURL:error:]");
+
     if (!_data->_promisedURL.isEmpty())
         WebCore::setMetadataURL(_data->_promisedURL, "", String(path));
     
